fix: Remove extraneous backslash from music.mdx
This change corrects a formatting issue by removing an unnecessary backslash at the end of a line.

--- a/src/routes/about-me/data/contents/music.mdx
+++ b/src/routes/about-me/data/contents/music.mdx
@@ -4,6 +4,6 @@ My most favorite music is modern Hip-Hop and R&B, particularly from the 2010s on
 
 You can check out some of my favorite tracks [here](https://music.apple.com/jp/playlist/best/pl.u-JPAZgxZILjr8mK9?l=en-US).
 
-I am also heavily influenced by the game Hotline Miami, which is why I'm a big fan of Wave music. While I listen to Hip-Hop when the mood strikes, I have Wave music playing almost constantly—it feels like I have it on for half of my day.\
+I am also heavily influenced by the game Hotline Miami, which is why I'm a big fan of Wave music. While I listen to Hip-Hop when the mood strikes, I have Wave music playing almost constantly—it feels like I have it on for half of my day.
 
 Feel free to explore my Wave playlist [here](https://music.apple.com/jp/playlist/tokyo/pl.u-11zB3YbTNBL1Aoy?l=en-US).
