feat: Open music playlist links in new tabs
Updated the markdown links for music playlists to use HTML anchor tags with `target="_blank"` and `rel="noreferrer"`.

--- a/src/routes/about-me/data/contents/music.mdx
+++ b/src/routes/about-me/data/contents/music.mdx
@@ -2,8 +2,8 @@ I enjoy music primarily for its sonic qualities rather than its lyrical content.
 
 My most favorite music is modern Hip-Hop and R&B, particularly from the 2010s onward.
 
-You can check out some of my favorite tracks [here](https://music.apple.com/jp/playlist/best/pl.u-JPAZgxZILjr8mK9?l=en-US).
+You can check out some of my favorite tracks <a href="https://music.apple.com/jp/playlist/best/pl.u-JPAZgxZILjr8mK9?l=en-US" target="_blank" rel="noreferrer">here</a>.
 
 I am also heavily influenced by the game Hotline Miami, which is why I'm a big fan of Wave music. While I listen to Hip-Hop when the mood strikes, I have Wave music playing almost constantly—it feels like I have it on for half of my day.
 
-Feel free to explore my Wave playlist [here](https://music.apple.com/jp/playlist/tokyo/pl.u-11zB3YbTNBL1Aoy?l=en-US).
+Feel free to explore my Wave playlist <a href="https://music.apple.com/jp/playlist/tokyo/pl.u-11zB3YbTNBL1Aoy?l=en-US" target="_blank" rel="noreferrer">here</a>.
